# mkdocs-footermatter

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yml  release.yml
overrides/: main.html
overrides/css/: footermatter.css
overrides/partials/: footermatter.html
src/mkdocs_footermatter/: __init__.py  plugin.py
tests/: test_plugin.py
