[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-footermatter"
version = "1.3.3"
keywords = ["mkdocs", "markdown", "footer", "author", "edited", "created", "frontmatter", "obsidian"]
description = "A plugin to extract authors, created date and updated date from YAML frontmatter"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Sondre Grønås", email = "mail@sondregronas.com" }]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]

dependencies = [
    "mkdocs>=1",
    "setuptools",
    "pendulum",
]

[project.urls]
homepage = "https://github.com/sondregronas/mkdocs-footermatter"
documentation = "https://github.com/sondregronas/mkdocs-footermatter"
repository = "https://github.com/sondregronas/mkdocs-footermatter"
issues = "https://github.com/sondregronas/mkdocs-footermatter/issues"
funding = "https://github.com/sponsors/sondregronas"

[project.optional-dependencies]
tests = [
    'pytest'
]

[project.entry-points."mkdocs.plugins"]
footermatter = "mkdocs_footermatter.plugin:FootermatterPlugin"